--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.5.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^8.57.0",
+    "sass": "^1.77.6",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
     "vite": "^5.3.1"
